fix visible course

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1125,6 +1125,12 @@ body.no-scroll .menu-overlay {
     font-size: 1.5rem;
   }
 }
+.survey-block{
+  h2{
+    font-weight: 800;
+    font-size: 1.5rem;
+  }
+}
 .thumbnail {
   img{
     max-width: 100%;
